data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1718.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\98\80\80\80\00\01\07\6d\6f\64\75\6c\65"
    "\42\0c\69\6d\70\6f\72\74\65\64\46\75\6e\63\00\00"
    "\03\83\80\80\80\00\02\00\00\0a\9a\80\80\80\00\02"
    "\86\80\80\80\00\00\02\40\00\0b\0b\89\80\80\80\00"
    "\00\03\40\10\00\10\01\0b\0b"
  )
""
)